--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,9 @@
 .hero-gradient {
   background: linear-gradient(
     97.86deg,
-    #a509ff 0%,
-    #34acc7 53.65%,
-    #a134c7 100%
+    #b23823 0%,
+    #2d4e6d 53.65%,
+    #b23823	 100%
   );
 }
 
